--- a/index.html
+++ b/index.html
@@ -138,7 +138,28 @@
 
         <!-- contact -->
         <section id="contact">
-            
+            <div class="container">
+                <h2>STAY IN TOUCH</h2>
+            </div>
+            <div id="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d501726.46045174234!2d106.41503335238232!3d10.754666398425051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529292e8d3dd1%3A0xf15f5aad773c112b!2zSOG7kyBDaMOtIE1pbmgsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1632993132924!5m2!1svi!2s" width=100% height="350" style="border:0;" allowfullscreen loading="lazy"></iframe>
+            </div>
+            <div class="container">
+                <div id="info">
+                    <h4>CONTACT INFOMATION</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p>
+                    <p>Cras fermentum elit quis magna congue, <strong>vel sodales</strong> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus</p>
+                </div>
+                <form action>
+                    <label for="name">YOUR NAME</label>
+                    <label for="email">YOUR EMAIL</label>
+                    <input type="text" id="name">
+                    <input type="email" id="email">
+                    <label for="message">YOUR MESSAGE</label>
+                    <textarea id="message" cols="30" rows="10"></textarea>
+                    <button>SEND MESSAGE</button>
+                </form>
+            </div>
         </section>
 
         <!-- footer -->
