--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
                 <h2>FEATURES.</h2>
                 <div id="group-features">
                     <div class="feature">
-                        <img src="/assets/images/features/feature1.jpg" alt="feature">
+                        <img src="./assets/images/features/feature1.jpg" alt="feature">
                         <p>PRODUCT DESIGN: EAMES CHAIRS</p>
                         <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
                     </div>
                     <div class="feature">
-                        <img src="/assets/images/features/feature2.jpg" alt="feature">
+                        <img src="./assets/images/features/feature2.jpg" alt="feature">
                         <p>ELEGANT AND COLORFUL LOGOS</p>
                         <p>I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
                     </div>
                     <div class="feature">
-                            <img src="/assets/images/features/feature3.jpg" alt="feature">
+                            <img src="./assets/images/features/feature3.jpg" alt="feature">
                         <p>A SHOWCASE OF CREATIVE</p>
                         <p>It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
                     </div>
