update responsive for contact

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                     <label for="name">YOUR NAME</label>
                     <label for="email">YOUR EMAIL</label>
                     <input type="text" id="name">
+                    <label for="email">YOUR EMAIL</label>
                     <input type="email" id="email">
                     <label for="message">YOUR MESSAGE</label>
                     <textarea id="message" cols="30" rows="10"></textarea>
